# MorningBreadcrumbs

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
.cursor/: index.mdc
config/: media_middleware.py  settings.py  urls.py
web/: admin.py  apps.py  context_processors.py  forms.py  image_processing.py  models.py  signals.py  urls.py  views.py
web/migrations/: 0001_initial.py  0002_post_created_at_featured_image_category_slug.py  0003_alter_category_options_alter_category_slug_and_more.py  0004_replace_featured_image_url_with_file_upload.py  0005_enable_pg_trgm.py
web/static/css/: site.css
web/templates/: base.html  category_detail.html  home.html  search_results.html
web/templates/partials/: footer.html  header.html  nav.html  post_card.html
web/templates/registration/: login.html
