[project]
name = "morning-breadcrumbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-stubs>=5.1.0",
    "gunicorn>=25.1.0",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.2.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ruff>=0.15.6",
]
